# AMOURANTHRTX

./: CMakeLists.txt  LICENSE  README.md  linux.sh
compute/: compute.comp  denoiser_post.comp
extras/hearer/: Readme  shower_hearer.cpp  universal_equation.cpp  universal_equation.hpp
extras/quantum/: LICENSE  Makefile  main.cpp  quantum_sim  ue_init.hpp  universal_equation.cpp
extras/quantum/engine/: logging.hpp
hearer/: Makefile  shower_hearer
include/: HandleInput.hpp  LICENSE  StoneKey.hpp  handle_app.hpp  main.hpp  ue_init.hpp
include/engine/: Dispose.hpp  KeyBindings.hpp  MaterialData.hpp  RTConstants.hpp  StoneKey.hpp  application.hpp  camera.hpp  camera_utils.hpp  core.hpp  logging.hpp  utils.hpp
include/engine/GLOBAL/: AMAZO_LAS.hpp  Amouranth.hpp  Boot.hpp  BufferManager.hpp  DimensionState.hpp  Dispose.hpp  GlobalBindings.hpp  GlobalContext.hpp  HandleInput.hpp  Houston.hpp  LAS.hpp  MeshLoader.hpp  OptionsMenu.hpp  PipelineManager.hpp  RTXHandler.hpp  ResourceManager.hpp  SDL3.hpp  Splash.hpp  StoneKey.hpp  SwapchainManager.hpp  Validation.hpp  VkSafeSTypes.hpp  VulkanContext.hpp  VulkanCore.hpp  VulkanRenderer.hpp  camera.hpp  camera_utils.hpp  exceptions.hpp  logging.hpp
include/engine/SDL3/: SDL3_audio.hpp  SDL3_font.hpp  SDL3_image.hpp  SDL3_init.hpp  SDL3_input.hpp  SDL3_vulkan.hpp  SDL3_window.hpp
include/engine/Vulkan/: Bindings.hpp  Compositor.hpp  HDR_pipeline.hpp  HDR_surface.hpp  ImGuiStoneKeyShield.hpp  MeshLoader.hpp  VulkanAccel.hpp  VulkanAccessors.hpp  VulkanBufferManager.hpp  VulkanCommon.hpp  VulkanContext.hpp  VulkanCore.hpp  VulkanHandles.hpp  VulkanPipelineManager.hpp  VulkanRTX_Setup.hpp  VulkanRayTracingPipeline.hpp  VulkanRenderer.hpp  VulkanResourceManager.hpp  VulkanSwapchainManager.hpp  Vulkan_LAS.hpp  Vulkan_init.hpp  types.hpp
include/modes/: RenderMode1.hpp  RenderMode2.hpp  RenderMode3.hpp  RenderMode4.hpp  RenderMode5.hpp  RenderMode6.hpp  RenderMode7.hpp  RenderMode8.hpp  RenderMode9.hpp
shaders/: StoneKey.glsl
shaders/compute/: ascension.comp  compute.comp  denoiser_post.comp  nexusDecision.comp  raster_prepass.comp  statsAnalyzer.comp  tonemap.comp  xorshift.comp
shaders/graphics/: fullscreen_vert.glsl  tonemap_frag.glsl  tonemap_vert.glsl
shaders/rasterization/: fragment.frag  vertex.vert
shaders/raytracing/: anyhit.rahit  callable.rcall  closest_hit.rchit  closesthit.rchit  graphics_frag.frag  graphics_vert.vert  intersection.rint  mid_anyhit.rahit  mid_raygen.rgen  miss.rmiss  raygen.rgen  shadow_anyhit.rahit  shadowmiss.rmiss  volumetric_anyhit.rahit  volumetric_raygen.rgen
src/: core.cpp  handle_app.cpp  main.cpp  main.cpp.bak  universal_equation.cpp
src/engine/: Dispose.cpp  HandleInput.cpp  camera.cpp  handle_app.cpp  stb_image_impl.cpp
src/engine/GLOBAL/: BufferManager.cpp  Dispose.cpp  Estate.cpp  GlobalContext.cpp  HandleInput.cpp  LAS.cpp  MeshLoader.cpp  PipelineManager.cpp  RTXHandler.cpp  SDL3.cpp  SDL3.cpp.bak  SwapchainManager.cpp  VulkanCore.cpp  VulkanRenderer.cpp  camera.cpp
src/engine/SDL3/: SDL3_audio.cpp  SDL3_font.cpp  SDL3_image.cpp  SDL3_init.cpp  SDL3_input.cpp  SDL3_vulkan.cpp  SDL3_window.cpp
src/engine/Vulkan/: Compositor.cpp  HDR_pipeline.cpp  HDR_surface.cpp  ImGuiStoneKeyShield.cpp  MeshLoader.cpp  VulkanAccel.cpp  VulkanBufferManager.cpp  VulkanCommon.cpp  VulkanComputePipeline.cpp  VulkanCore.cpp  VulkanCore.cpp.bak  VulkanPipelineManager.cpp  VulkanRTX_Setup.cpp  VulkanRayTracingPipeline.cpp  VulkanRenderer.cpp  VulkanRenderer_Init.cpp  VulkanRenderer_Render.cpp  VulkanResourceManager.cpp  VulkanSwapchain.cpp  VulkanSwapchainManager.cpp  Vulkan_LAS.cpp  Vulkan_init.cpp
src/engine/stb/: stb_image_impl.cpp
src/modes/: RenderMode1.cpp  RenderMode2.cpp  RenderMode3.cpp  RenderMode4.cpp  RenderMode5.cpp  RenderMode6.cpp  RenderMode7.cpp  RenderMode8.cpp  RenderMode9.cpp  mode1.cpp  mode2.cpp  mode3.cpp  mode4.cpp  mode5.cpp  mode6.cpp  mode7.cpp  mode8.cpp  mode9.cpp
